Re-fixed the Level 3 quals on mobile

--- a/src/components/LevelThreeQualifications/LevelThreeQualifications.css
+++ b/src/components/LevelThreeQualifications/LevelThreeQualifications.css
@@ -58,3 +58,7 @@
     margin: 0 auto;
 }
 
+@media only screen and (max-width: 600px) {.mobiletextbox{
+    margin-left: 0%;
+  }}
+  
